some changes structure

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,17 +31,10 @@ on:
     branches: [ "master" ]
 
 env:
+  applicationfolder : src
   AWS_REGION: ${{ vars.AWS_REGION }}                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: ${{ vars.AWS_ECR_REPOSITORY }}         # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
-
-permissions:
-  contents: read
+  S3BUCKET: ${{ vars.S3_BUCKET }}
 
 jobs:
   deploy:
@@ -50,7 +43,7 @@ jobs:
     environment: production
 
     steps:
-    - name: Checkout
+    - name: Checkout Repository
       uses: actions/checkout@v3
 
     - name: Configure AWS credentials
@@ -74,5 +67,11 @@ jobs:
         # push it to ECR so that it can
         # be deployed to ECS.
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f config/Dockerfile .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker tag iris-webapp:latest $aws-access-key-id.dkr.ecr.us-east-1.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
+        docker push $aws-access-key-id.dkr.ecr.us-east-1.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+    - name: Upload Artifact to s3
+      working-directory: ${{ env.applicationfolder }}/target
+      run: aws s3 cp *.war s3://${{ env.S3BUCKET }}/
+        
