--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -66,10 +66,11 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f config/Dockerfile .
-        docker tag iris-webapp:latest $aws-access-key-id.dkr.ecr.us-east-1.amazonaws.com/$ECR_REPOSITORY:latest
-        docker push $aws-access-key-id.dkr.ecr.us-east-1.amazonaws.com/$ECR_REPOSITORY:latest
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+        echo "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -f config/Dockerfile .
+        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:latest $aws-access-key-id.dkr.ecr.us-east-1.amazonaws.com/$ECR_REGISTRY/$ECR_REPOSITORY:latest
+        docker push $aws-access-key-id.dkr.ecr.us-east-1.amazonaws.com/$ECR_REGISTRY/$ECR_REPOSITORY:latest
+        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:latest" >> $GITHUB_OUTPUT
 
     - name: Upload Artifact to s3
       working-directory: ${{ env.applicationfolder }}/target
