--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -60,19 +60,20 @@ jobs:
         docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:latest
         echo "image=$ECR_REPOSITORY:latest" >> $GITHUB_OUTPUT
     
-    - name: Deploy to App Runner Image
-      id: deploy-apprunner
-      uses: awslabs/amazon-app-runner-deploy@main
-      with:
-        service: app-runner-git-deploy-service
-        image: 215557216277.dkr.ecr.us-east-1.amazonaws.com/iris-webapp
-        access-role-arn: ${{ secrets.AWS_ROLE_ARN }}
-        region: ${{ vars.AWS_REGION }}
-        cpu : 0.5
-        memory : 1
-        # Deprecated: wait-for-service-stability: true
-        # The new way to control service stability timeout
-        wait-for-service-stability-seconds: 1200
+    # - name: Deploy to App Runner Image
+    #   id: deploy-apprunner
+    #   uses: awslabs/amazon-app-runner-deploy@main
+    #   with:
+    #     service: app-runner-git-deploy-service
+    #     image: 215557216277.dkr.ecr.us-east-1.amazonaws.com/iris-webapp
+    #     access-role-arn: ${{ secrets.AWS_ROLE_ARN }}
+    #     region: ${{ vars.AWS_REGION }}
+    #     cpu : 0.5
+    #     memory : 1
+    #     # Deprecated: wait-for-service-stability: true
+    #     # The new way to control service stability timeout
+    #     wait-for-service-stability-seconds: 1200
+    #     port : 5000
     
-    - name: App Runner URL
-      run: echo "App runner URL ${{ steps.deploy-apprunner.outputs.service-url }}"
+    # - name: App Runner URL
+    #   run: echo "App runner URL ${{ steps.deploy-apprunner.outputs.service-url }}"
